[package]
name = "hxr"
version = "0.1.0"
edition = "2021"
description = "A simple HTTP request CLI tool"

[dependencies]
cat = "0.0.1"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
